art register repository modified